# ms-gestion-gestor

./: .gitignore  Dockerfile  README.md  db.txt  main.py  pyproject.toml  requirements.txt  schemas.py
