[project]
name = "ms-gestion-gestor"
version = "1.0.0"
description = "Microservicio para la gestión de gestores"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.fastapi.dev]
port = 6000
host = "0.0.0.0"
reload = true 